re PR tree-optimization/42709 (error: type mismatch in pointer plus expression)

PR tree-optimization/42709
	* tree-vect-slp.c (vect_get_constant_vectors): Use constant's type
	as scalar type in creation of constant vector operand.

From-SVN: r155882